# easel

./: CHANGELOG.md  README.md  hie.yml  shader.frag  shader.vert  shaderworkbench.cabal
app/: Main.hs
lib/: Bench.hs  BenchProgram.hs  GL.hs  SWB.hs
