cabal-version:      2.4
name:               shaderworkbench
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable shaderworkbench
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , shaderworkbench-lib
                    , bytestring
                    , OpenGL
                    , GLFW-b
                    , GLUtil
    hs-source-dirs:   app
    default-language: Haskell2010

library shaderworkbench-lib
  hs-source-dirs:   lib
  default-language: Haskell2010
  exposed-modules:  Bench
                  , SWB
                  , GL
  build-depends:    base ^>=4.14.3.0
                  , bytestring
                  , OpenGL
                  , GLFW-b
                  , GLUtil
                  , synchronous-channels
                  , text
                  , filepath
                  , fsnotify
                  , directory
                  , extra
                  , freer-simple
                  , lens
                  , co-log
                  , mtl
